# 5d-gui-framework

./: .gitignore  ADVANCED_LAYOUT_GUIDE.md  ADVANCED_WINDOW_FEATURES.md  API.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  BUILD.md  CAMERA_GUIDE.md  CAMERA_IMPLEMENTATION_SUMMARY.md  CMakeLists.txt  CONTRIBUTING.md  DEMO_GUIDE.md  FINAL_SUMMARY.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_OPTIMIZATIONS.md  LICENSE  LINUX_AND_NN_IMPLEMENTATION.md  LINUX_SUPPORT.md  ML_RENDERER_OPTIMIZATION.md  NEURAL_NETWORK_ENHANCEMENT_SUMMARY.md  NEURAL_NETWORK_GUIDE.md  NEURAL_NETWORK_IMPLEMENTATION.md  NEW_FEATURES.md  OPTIMIZATIONS_COMPLETED.md  OPTIMIZATION_GUIDE.md  PRODUCTION_HOOK_GUIDE.md  QUICKREF.md  README.md  ROADMAP.md  TODO.md  USAGE.md  V13_FEATURES.md  V2_FEATURES.md  VISUAL_SHOWCASE.md  WIDGET_ADDITIONS.md  WIDGET_ADVANCED_FEATURES.md  WIDGET_GUIDE.md  WIDGET_PROPERTIES_SUMMARY.md
examples/: advanced_window_demo.cpp  camera_demo.cpp  demo.cpp  demo_linux.cpp  dpi_multimonitor_demo.cpp  hardware_accel_demo.cpp  layout_engine_demo.cpp  ml_optimizer_demo.cpp  neural_network_advanced_demo.cpp  neural_network_demo.cpp  new_widgets_demo.cpp  optimization_demo.cpp  richtext_datagrid_demo.cpp  toolbar_demo.cpp  v13_showcase_demo.cpp  widget_demo.cpp  widget_demo_linux.cpp  widget_enhancements_demo.cpp  widget_properties_demo.cpp  widget_showcase.cpp
include/SDK/: AdvancedWidgets.h  CameraController.h  D2DRenderBackend.h  DPIManager.h  DataGrid.h  GDIRenderBackend.h  InstructionDecoder.h  Layout.h  Menu.h  MonitorManager.h  NeuralNetwork.h  NeuralPromptBuilder.h  Platform.h  ProgressBar.h  PromptWindowBuilder.h  RenderBackend.h  Renderer.h  RendererOptimizer.h  RichText.h  SDK.h  StringUtils.h  Theme.h  Toolbar.h  Tooltip.h  Widget.h  Widget3D.h  WidgetManager.h  Window.h  WindowAnimation.h  WindowGroup.h  WindowHook.h  WindowManager.h  WindowSnapping.h  WindowX11.h  X11RenderBackend.h
src/SDK/: AdvancedWidgets.cpp  CameraController.cpp  D2DRenderBackend.cpp  DPIManager.cpp  DataGrid.cpp  GDIRenderBackend.cpp  InstructionDecoder.cpp  Layout.cpp  MonitorManager.cpp  NeuralNetwork.cpp  NeuralPromptBuilder.cpp  ProgressBar.cpp  PromptWindowBuilder.cpp  RenderBackend.cpp  Renderer.cpp  RendererOptimizer.cpp  RichText.cpp  SDK.cpp  Theme.cpp  Toolbar.cpp  Tooltip.cpp  Widget.cpp  Widget3D.cpp  WidgetManager.cpp  Window.cpp  WindowAnimation.cpp  WindowGroup.cpp  WindowHook.cpp  WindowManager.cpp  WindowSnapping.cpp  WindowX11.cpp  X11RenderBackend.cpp
